# Infant-Stack

./: .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DB.session.sql  GETTING_STARTED.md  LICENSE  QA_MASTER_PLAN.md  README.md  SECURITY.md  docker-compose.yml  health_report.json  mosquitto.conf  mqtt_to_db.py  package-lock.json  qa_backlog.json  run_python_simulation.ps1  run_simulations.ps1  run_simulations.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
Instructions/: GitHub Repository Structure.txt
backend/: .dockerignore  Dockerfile  README.md  check_tags.py  debug_enum_out.txt  debug_enums_log.txt  debug_query_log.txt  pyproject.toml  pytest.ini  requirements.txt  reset_users_full.py  seed_log.txt  seed_log_2.txt  seed_log_3.txt
backend/database/migrations/: 001_initial_schema.sql  002_security_dashboard.sql
backend/database/orm_models/: __init__.py  models.py  roles.py
backend/scripts/: debug_enum.py  debug_keycloak.py  debug_zones_query.py  fix_keycloak_permissions.py  migrate_roles.py  reset_zones.py  seed_zones.py
backend/services/: alert_escalation.py  geofence_service.py
backend/services/api_gateway/: main.py
backend/services/api_gateway/middleware/: __init__.py  audit.py  auth.py
backend/services/api_gateway/routes/: __init__.py  alerts.py  audit.py  biometric.py  cameras.py  config.py  gates.py  health.py  infants.py  mothers.py  pairings.py  roles.py  rtls.py  stats.py  users.py  websocket.py  zones.py
backend/services/archiver/: main.py
backend/services/device_gateway/: __init__.py  main.py
backend/shared_libraries/: auth.py  config.py  database.py  keycloak_admin.py  logging.py
backend/tests/: conftest.py  test_health.py  test_sanity.py  test_stats.py  test_stats_integration.py  test_users.py  test_users_integration.py
dashboards/: .eslintrc.json  Dockerfile  nginx.conf  package-lock.json  package.json  test_output.txt
devops/: prometheus.yml
keycloak/: realm-export.json
qa_automation/: debug_auth.js  package-lock.json  package.json  playwright.config.ts  results.json  results_headed.json  results_v3.json  results_v4.json  results_v5.json  results_v6.json  results_v7.json  results_v8.json
security-reports/: api-gateway-zap-report.html  zap.yaml
simulation/: main.py  verify_system.py
simulation_software/: main.py  verify_system.py
(+139 files in other folders)
