[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services", "shared_libraries", "database"]

[project]
name = "infant-stack-backend"
version = "0.1.0"
description = "Backend services for Infant-Stack hospital security ecosystem"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Infant-Stack Contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "paho-mqtt>=2.0.0",
    "motor>=3.3.0",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.4.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
    "python-multipart>=0.0.22",
    "email-validator>=2.1.0",
    "apscheduler>=3.10.0",
    "prometheus-fastapi-instrumentator>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "faker>=22.0.0",
]

[project.scripts]
device-gateway = "services.device_gateway.main:main"
api-gateway = "services.api_gateway.main:main"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
disable_error_code = ["assignment", "index", "misc", "arg-type", "call-arg", "no-untyped-def", "no-untyped-call", "type-arg", "operator", "name-defined", "annotation-unchecked", "override"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
